style.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');

:root {
  --light: #DFDFDF;
  --dark: #494949;
}

* {
  font-family: 'Rubik', Arial, sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  height: 100%;
}

body {
  min-height: 100%;

  display: grid;
  align-content: center;
  justify-items: center;
  gap: 24px;
}

#gameboard {
  width: min(510px, 100%);
  height: min(510px, 100vw);
  
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);

  border: solid 4px var(--light);
  border-radius: 25px;
}

#gameboard .square {
  border: solid 4px var(--light);

  display: flex;
  justify-content: center;
  align-items: center;
}

#gameboard .square > img {
  width: 60%;
}

#gameboard .square:nth-of-type(1) {
  border-top-left-radius: 21px;
}
#gameboard .square:nth-of-type(3) {
  border-top-right-radius: 21px;
}
#gameboard .square:nth-of-type(7) {
  border-bottom-left-radius: 21px;
}
#gameboard .square:nth-of-type(9) {
  border-bottom-right-radius: 21px;
}

button {
  font-size: 18px;
  font-weight: 500;
  color: var(--dark);
  padding: 10px 15px;
  background-color: transparent;
  border: solid 4px transparent;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.2s;
}
button:hover {
  border-color: var(--light);
}

.hidden {
  display: none !important;
}

@keyframes modalAppear {
  0% {
    transform: translateY(100px);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}
@-webkit-keyframes modalAppear {
  0% {
    transform: translateY(100px);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

#modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);

  display: grid;
  align-items: center;
  justify-content: center;
}

.modal-content {
  width: 300px;
  padding: 2rem 1rem;
  background-color: white;
  border: solid 8px var(--light);
  border-radius: 25px;

  text-align: center;
  animation: 0.3s ease-in 0s 1 modalAppear;
  -webkit-animation: 0.3s ease-in 0s 1 modalAppear;
}

h2 {
  font-weight: 500;
  margin-bottom: 1rem;
}

#scoreboard {
  width: min(510px, 100%);
  padding: 1rem;
  display: grid;
  grid-template-columns: 1fr 1fr;

  font-size: 20px;
  font-weight: 500;
  color: var(--dark);
}

#scoreboard .score {
  font-size: 16px;
  font-weight: 400;
  color: #838383;
}

#scoreboard > div:nth-of-type(2) {
  text-align: right;
}

